<resources>
    <string name="app_name">シフト管理システム</string>
    <string name="loginUserLabel">ログインユーザー</string>
    <string name="loginUserName">ログインユーザー名</string>
    <string name="userName">ユーザー名</string>
    <string name="userList">ユーザーリスト</string>
    <string name="userAvatar">ユーザーアバター</string>
    <string name="companyName">会社名</string>
    <string name="companyDesc">会社概要</string>
    <string name="email">メールアドレス</string>
    <string name="tel">電話番号</string>
    <string name="password">パスワード</string>
    <string name="role">権限</string>
    <string name="login">ログイン</string>
    <string name="back">戻る</string>
    <string name="submit">登録</string>
    <string name="edit">編集</string>
    <string name="update">更新</string>
    <string name="delete">削除</string>
    <string name="date">日付</string>
    <string name="selectedDate">選択した日付: </string>
    <string name="attendDate">出勤日</string>
    <string name="attendTime">出勤時間</string>
    <string name="endTime">終了時間</string>
    <string name="date_hint">ダブルクリックで日付を選ぶ</string>
    <string name="time_hint">ダブルクリックで時間を選ぶ</string>
    <string name="memo">メモ</string>
    <string name="notification">通知</string>
    <string name="notification_time">通知時間</string>
    <string name="title">タイトル</string>
    <string name="shift_system">シフト管理システム</string>
    <string name="company_info">会社概要</string>

    <string name="prompt">選択してください</string>
    <string-array name="role_array">
        <item>一般ユーザー</item>
        <item>管理者</item>
    </string-array>
    <string-array name="answer_array">
        <item>はい</item>
        <item>いいえ</item>
    </string-array>
    <string-array name="remind_time_array">
        <item>1時間前</item>
        <item>3時間前</item>
        <item>12時間前</item>
        <item>24時間前</item>
        <item>48時間前</item>
    </string-array>
    <string-array name="users_array">
        <item>User1</item>
        <item>User2</item>
        <item>User3</item>
    </string-array>
    <string-array name="user_action_array">
        <item>編集</item>
        <item>削除</item>
    </string-array>
</resources>
